2006-05-17  Derek Price  <derek@ximbiot.com>

	* main.c (cmd_usage): Add sign & verify synopsis.
	* sign.c (sign_usage): Reformat.

	* commit.c (checkaddfile): Prefer TAG_HEAD macro to the literal string.

2006-05-16  Derek Price  <derek@ximbiot.com>

	* commit.c (precommit_list_to_args_proc), logmsg.c
	(logmsg_list_to_args_proc): Provide default case to suppress -Wall
	warning.

2006-05-16  Mark D. Baushke  <mdb@gnu.org>

	* commit.c (check_fileproc): Set rev_old to "0" instead of NULL
	when UseNewInfoFmtStrings.
	(commit_fileproc): Set rev_new for removed files when
	UseNewInfoFmtStrings.
	(precommit_list_to_args_proc): Add %a format for file action
	(status) to commitinfo.
	* logmsg.c (logmsg_list_to_args_proc): Add %a format for file
	action (status) to loginfo.
	* sanity.sh (info): Update and expand tests for new %a format and
	real version when UseNewInfoFmtStrings. 
	(CVS patch #5099 from Michael K. Sanders <msanders@confusion.net>.)

2006-05-16  Derek Price  <derek@ximbiot.com>

	* main.c: Update copyright for 2006.

	* admin.c (admin): Factor CVS_ADMIN_GROUP check to...
	* subr.c (is_admin): ...this new function.
	* subr.h (is_admin): Add proto/macro.
	* watch.c (watch_usage): Reformat and add -e/-u info.
	(watch_modify_watchers): Accept <user>.
	(watch_addremove): Process new args.
	(addremove_args): Add user.

2006-05-12  Mark D. Baushke  <mdb@gnu.org>

	* log.c (log_expand_revlist): Add assert (r->first). It should
	only be possible for both r->first == NULL && r->last == NULL
	which would have been handled.
	[Fixes NetBSD coverity cid-1063.]

	* server.c (do_cvs_command): Protect close (dev_null_fd) against
	invalid fd value in error_exit.
	[Fixes NetBSD coverity cid-1307.]
	
	* rcs.c (RCS_isdead): Assert that the first argument is not NULL.
	[Fixes NetBSD coverity cid-1058.]

	* commit.c (checkaddfile): Do not dereference NULL on call to
	error().
	[Fixes NetBSD coverity cid-1061.]

	* log.c (cvslog): Assert p->start && p->end instead of masking the